# meal_planner

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DOCSTRING_STYLE_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  alembic.ini  debug_recipes.py  deploy.py  mre_fasthtml_typeerror.py  pyproject.toml  run_fast_coverage.sh  web_only.py
.cursor/rules/: code-style-rules.mdc  fasthtml-rules.mdc  htmx-rules.mdc  modal-rules.mdc  model_rules.mdc  monsterui-rules.mdc  planning-rules.mdc  style-rules.mdc  testing-rules.mdc  web-programming-rules.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  ci_cd.yml  deploy.yml
alembic/: env.py  script.py.mako
alembic/versions/: 07760d4f0aad_fix_uuid_column_types.py  1c2c47357c10_create_recipe_table.py  1c66282b9e50_add_timestamps_to_recipes_table.py  2a3b4c5d6e7f_create_users_table.py  3a4b5c6d7e8f_convert_recipe_id_to_uuid.py  47bdb0e75fe9_add_servings_fields_to_recipes_table.py  86635a760fcf_debug_uuid_data_format.py  8dda03f6f2c2_clean_up_integer_ids.py  9548ad40c2e4_fix_null_timestamps.py  b7c6e000a7e5_replace_servings_fields_with_makes_.py  dd10b1472d47_add_source_field_to_recipes.py  merge_heads_20250621.py
dev_plans/: 20250523_test_reorganization.md  20250527_iterative_route_refactor_phase5.md  20250528_core_refactor.md  20250603_require_one_instruction.md  20250605_add_timestamps_to_recipes.md  20250609_add_recipe_update_operation.md  20250618_save_vs_save_as_functionality.md  20250619_replace_servings_with_makes.md  REFACTORING.md  require_one_instruction.md
meal_planner/: __init__.py  config.py  config.py,cover  core.py  database.py  database.py,cover  db.py  form_processing.py  main.py  main.py,cover  models.py  models.py,cover
meal_planner/api/: __init__.py  recipes.py  recipes.py,cover  users.py
meal_planner/routers/: __init__.py  actions.py  pages.py  ui_fragments.py
meal_planner/services/: __init__.py  call_llm.py  call_llm.py,cover  extract_webpage_text.py  extract_webpage_text.py,cover  llm_service.py  process_recipe.py  process_recipe.py,cover  recipe_processing.py  text_processing.py  webpage_text_extractor.py
meal_planner/static/: main.js  recipe-editor.js
meal_planner/ui/: __init__.py  common.py  common.py,cover  edit_recipe.py  edit_recipe.py,cover  extract_recipe.py  extract_recipe.py,cover  layout.py  layout.py,cover  list_recipes.py  list_recipes.py,cover  recipe_editor.py  recipe_form.py  recipe_list.py
scripts/: delete_recipes.py  show_recipes.py
tests/: conftest.py  constants.py  helpers.py  test_api.py  test_database.py  test_db.py  test_form_processing.py  test_helpers.py  test_main.py  test_main_evals.py  test_ml_evals.py  test_models.py  test_models_makes.py  test_models_servings.py  test_ui_makes.py  test_ui_servings.py
(+81 files in other folders)
