[project]
name = "meal_planner"
version = "0.1.0"
description = "A meal planner"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "monsterui>=1.0.19",
    "python-fasthtml",
]

[project.optional-dependencies]
dev = [
    "coverage",
    "httpx",
    "pyright",
    "pytest",
    "pytest-cov",
    "pytest-httpx",
    "ruff",
    "uv",
]

[tool.uv]
package = true

[tool.ruff]
lint.select = ["E", "F", "W", "I", "B", "C4", "SIM", "S"]
lint.per-file-ignores = {"tests/**/*.py" = ["S101"]}  # allow `assert` in tests

[tool.ruff.lint.isort]
known-first-party = ["meal_planner"]
