[project]
name = "meal_planner"
version = "0.1.0"
description = "A meal planner"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "google-generativeai",
    "httpx",
    "instructor",
    "monsterui",
    "pydantic",
    "python-fasthtml",
]

[project.optional-dependencies]
dev = [
    "coverage",
    "httpx",
    "jupyter",
    "pyright",
    "pytest",
    "pytest-cov",
    "pytest-httpx",
    "ruff",
    "thefuzz",
    "uv",
]

[tool.uv]
package = true

[tool.ruff]
lint.select = ["E", "F", "W", "I", "B", "C4", "SIM", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"] # allow `assert` in tests
"meal_planner/main.py" = ["F811"] # fasthtml uses http methods as function names

[tool.ruff.lint.isort]
known-first-party = ["meal_planner"]

[tool.pyright]
reportRedeclaration = false
