[project]
name = "meal_planner"
version = "0.1.0"
description = "A meal planner"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anyio",
    "beautifulsoup4>=4.13.4",
    "openai",
    "httpx",
    "instructor",
    "monsterui",
    "pydantic",
    "python-fasthtml",
    "html2text",
    "pyyaml>=6.0.2",
    "modal>=0.74.29",
    "fastlite>=0.1.3",
    "sqlmodel",
    "alembic",
]

[project.optional-dependencies]
dev = [
    "beautifulsoup4",
    "coverage",
    "datasette",
    "httpx",
    "jupyter",
    "pre-commit",
    "pyright",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-httpx",
    "ruff",
    "uv",
]

[tool.uv]
package = true

[tool.setuptools]
packages = ["meal_planner"]

[tool.ruff]
lint.select = ["E", "F", "W", "I", "B", "C4", "SIM", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"] # allow `assert` in tests
"meal_planner/main.py" = ["F811"] # fasthtml uses http methods as function names

[tool.ruff.lint.isort]
known-first-party = ["meal_planner"]

[tool.pyright]
reportRedeclaration = false

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
]
